@@ -16,6 +16,7 @@ import org.springframework.stereotype.Service;
 
 import com.publicissapient.kpidashboard.apis.appsetting.service.ConfigHelperService;
 import com.publicissapient.kpidashboard.apis.bitbucket.service.BitBucketKPIService;
+import com.publicissapient.kpidashboard.apis.bitbucket.service.scm.ScmKpiHelperService;
 import com.publicissapient.kpidashboard.apis.common.service.impl.KpiHelperService;
 import com.publicissapient.kpidashboard.apis.constant.Constant;
 import com.publicissapient.kpidashboard.apis.enums.KPICode;
@@ -36,7 +37,7 @@ import com.publicissapient.kpidashboard.common.model.application.DataCount;
 import com.publicissapient.kpidashboard.common.model.application.FieldMapping;
 import com.publicissapient.kpidashboard.common.model.application.Tool;
 import com.publicissapient.kpidashboard.common.model.jira.Assignee;
-import com.publicissapient.kpidashboard.common.model.scm.ScmCommits;
+import com.publicissapient.kpidashboard.common.model.scm.ScmMergeRequests;
 import com.publicissapient.kpidashboard.common.util.DateUtil;
 
 import lombok.RequiredArgsConstructor;
@@ -50,10 +51,11 @@ public class ScmPRThroughputServiceImpl
 
 	private static final String NO_MERGE = "No. of Merge Requests";
 	private static final String ASSIGNEE_SET = "assigneeSet";
-	private static final String COMMIT_LIST = "commitList";
+	private static final String MRS_LIST = "mrsList";
 
 	private final ConfigHelperService configHelperService;
 	private final KpiHelperService kpiHelperService;
+	private final ScmKpiHelperService scmKpiHelperService;
 
 	/** {@inheritDoc} */
 	@Override
@@ -97,9 +99,16 @@ public class ScmPRThroughputServiceImpl
 	public Map<String, Object> fetchKPIDataFromDb(
 			List<Node> leafNodeList, String startDate, String endDate, KpiRequest kpiRequest) {
 		Map<String, Object> scmDataMap = new HashMap<>();
+		List<ScmMergeRequests> scmMergeRequests =
+				scmKpiHelperService.getMergeRequests(
+						leafNodeList.get(0).getProjectFilter().getBasicProjectConfigId(),
+						DeveloperKpiHelper.getStartAndEndDate(kpiRequest));
+		List<Assignee> assigneeList =
+				scmKpiHelperService.getJiraAssigneeForScmUsers(
+						leafNodeList.get(0).getProjectFilter().getBasicProjectConfigId());
 
-		scmDataMap.put(ASSIGNEE_SET, getScmUsersFromBaseClass());
-		scmDataMap.put(COMMIT_LIST, getCommitsFromBaseClass());
+		scmDataMap.put(ASSIGNEE_SET, assigneeList);
+		scmDataMap.put(MRS_LIST, scmMergeRequests);
 
 		return scmDataMap;
 	}
@@ -146,12 +155,13 @@ public class ScmPRThroughputServiceImpl
 			return;
 		}
 
-		Map<String, Object> scmDataMap = fetchKPIDataFromDb(null, null, null, null);
-		List<ScmCommits> allCommits = (List<ScmCommits>) scmDataMap.get(COMMIT_LIST);
+		Map<String, Object> scmDataMap =
+				fetchKPIDataFromDb(List.of(projectLeafNode), null, null, kpiRequest);
+		List<ScmMergeRequests> allMrs = (List<ScmMergeRequests>) scmDataMap.get(MRS_LIST);
 		List<Assignee> assigneeList = (List<Assignee>) scmDataMap.get(ASSIGNEE_SET);
 
-		if (CollectionUtils.isEmpty(allCommits)) {
-			log.error("[BITBUCKET-AGGREGATED-VALUE]. No commits found for project {}", projectLeafNode);
+		if (CollectionUtils.isEmpty(allMrs)) {
+			log.error("[BITBUCKET-AGGREGATED-VALUE]. No mrs found for project {}", projectLeafNode);
 			return;
 		}
 
@@ -165,10 +175,10 @@ public class ScmPRThroughputServiceImpl
 												.map(email -> Map.entry(email, a.getAssigneeName())))
 						.collect(Collectors.toMap(Map.Entry::getKey, Map.Entry::getValue, (a, b) -> a));
 
-		Map<ObjectId, List<ScmCommits>> commitsByProcessorItem =
-				allCommits.stream()
+		Map<ObjectId, List<ScmMergeRequests>> mrsByProcessorItem =
+				allMrs.stream()
 						.filter(c -> c.getProcessorItemId() != null)
-						.collect(Collectors.groupingBy(ScmCommits::getProcessorItemId));
+						.collect(Collectors.groupingBy(ScmMergeRequests::getProcessorItemId));
 
 		Map<String, List<DataCount>> kpiTrendDataByGroup = new LinkedHashMap<>();
 		List<RepoToolValidationData> validationDataList = new ArrayList<>();
@@ -184,13 +194,13 @@ public class ScmPRThroughputServiceImpl
 							return;
 						}
 						ObjectId processorItemId = tool.getProcessorItemList().get(0).getId();
-						List<ScmCommits> toolCommits =
-								commitsByProcessorItem.getOrDefault(processorItemId, Collections.emptyList());
-						List<ScmCommits> commitsInRange =
-								DeveloperKpiHelper.filterCommitsByCommitTimeStamp(toolCommits, periodRange);
+						List<ScmMergeRequests> toolMrs =
+								mrsByProcessorItem.getOrDefault(processorItemId, Collections.emptyList());
+						List<ScmMergeRequests> mrsInRange =
+								DeveloperKpiHelper.filterMergeRequestsByMergedDate(toolMrs, periodRange);
 						processToolData(
 								tool,
-								commitsInRange,
+								mrsInRange,
 								emailToNameMap,
 								dateLabel,
 								projectLeafNode.getProjectFilter().getName(),
@@ -209,7 +219,7 @@ public class ScmPRThroughputServiceImpl
 
 	private void processToolData(
 			Tool tool,
-			List<ScmCommits> commitsInRange,
+			List<ScmMergeRequests> mrsInRange,
 			Map<String, String> emailToNameMap,
 			String dateLabel,
 			String projectName,
@@ -223,22 +233,22 @@ public class ScmPRThroughputServiceImpl
 		String branchName = getBranchSubFilter(tool, projectName);
 		String overallKpiGroup = branchName + "#" + Constant.AGGREGATED_VALUE;
 
-		List<ScmCommits> mergeCommits =
-				commitsInRange.stream()
-						.filter(commit -> Boolean.TRUE.equals(commit.getIsMergeCommit()))
-						.collect(Collectors.toList());
+		List<ScmMergeRequests> mergeRequests =
+				mrsInRange.stream()
+						.filter(mrs -> mrs.isClosed() && "merged".equalsIgnoreCase(mrs.getState()))
+						.toList();
 
-		long totalMergeRequests = mergeCommits.size();
+		long totalMergeRequests = mergeRequests.size();
 
 		setDataCount(projectName, dateLabel, overallKpiGroup, totalMergeRequests, kpiTrendDataByGroup);
 
-		Map<String, List<ScmCommits>> userWiseMergeCommits =
-				DeveloperKpiHelper.groupCommitsByUser(mergeCommits);
+		Map<String, List<ScmMergeRequests>> userWiseMergeRequest =
+				DeveloperKpiHelper.groupMergeRequestsByUser(mergeRequests);
 
-		userWiseMergeCommits.forEach(
-				(userEmail, userMergeCommits) -> {
+		userWiseMergeRequest.forEach(
+				(userEmail, userMergeRequest) -> {
 					String developerName = emailToNameMap.getOrDefault(userEmail, userEmail);
-					long mrCount = userMergeCommits.size();
+					long mrCount = userMergeRequest.size();
 					String userKpiGroup = branchName + "#" + developerName;
 					setDataCount(projectName, dateLabel, userKpiGroup, mrCount, kpiTrendDataByGroup);
 					validationDataList.add(
@@ -285,9 +295,7 @@ public class ScmPRThroughputServiceImpl
 								});
 
 		dataCount.setValue(((Number) dataCount.getValue()).longValue() + mrCount);
-
 		Map<String, Object> hoverValues = new HashMap<>();
-		hoverValues.put(NO_MERGE, dataCount.getLineValue());
 		dataCount.setHoverValue(hoverValues);
 	}
 
